--- a/src/app/style/index.scss
+++ b/src/app/style/index.scss
@@ -1,1 +1,26 @@
-/* SCSS */
+@import "global/color";
+@import "global/reset";
+
+a {
+    @extend %reset-a;
+}
+
+html {
+    background-color: darken($background-color, 33%);
+    color: $primary-fill-color;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    height: 100%;
+    text-shadow: $primary-shadow-color 1px 1px 5px;
+}
+body {
+    @extend %reset-body;
+
+    background-color: $background-color;
+    background-image: linear-gradient(darken($background-color, 15%), $background-color);
+    box-shadow: rgba(0, 0, 0, 0.42) 0 10px 10px;
+    box-sizing: border-box;
+    margin: 0 auto;
+    max-width: 30em;
+    min-height: 100%;
+}
