--- a/src/app/component/weather-forecast/weather-forecast.component.scss
+++ b/src/app/component/weather-forecast/weather-forecast.component.scss
@@ -11,7 +11,7 @@
     overflow: scroll;
     width: 100%;
 
-    & > li {
+    &__prediction {
         @extend %reset-li;
         @include padding-horizontal(0.5ch);
 
@@ -26,7 +26,7 @@
         }
     }
 
-    time {
+    &__prediction-time {
         font-size: 0.8rem;
         font-weight: 500;
     }
