--- a/src/app/component/weather-summary/weather-summary.component.scss
+++ b/src/app/component/weather-summary/weather-summary.component.scss
@@ -13,30 +13,31 @@
     padding: 1rem 1rem;
     width: 100%;
 
-    h2 {
+    &__header {
         @extend %reset-h;
         font-size: 2rem;
         width: 50%;
     }
 
-    dl {
+    &__measurements {
         @extend %reset-dl;
         display: flex;
         flex-direction: row;
         width: 50%;
-        & > div {
-            align-items: center;
-            display: flex;
-            justify-content: space-evenly;
-            width: 50%;
-        }
     }
 
-    dt {
+    &__measurement {
+        align-items: center;
+        display: flex;
+        justify-content: space-evenly;
+        width: 50%;
+    }
+
+    &__measurement-label {
         @extend %hide-accessible;
     }
 
-    dd {
+    &__measurement-value {
         @extend %reset-dd;
     }
 }
